2006-06-28  Petr Ovtchenkov  <ptr@island.corbina.net>

	* xmt.cc: clean pass thread's return code---avoid
	warnings on machines with sizeof(void *) > sizeof(int),
	i.e. on ia64/amd64.

2005-12-07  Petr Ovtchenkov  <ptr@island.corbina.net>

	* config/_freebsd.h: fix _FIT defines for spinlock
	and rwlock functions on FreeBSD 5.3.

	* xmt.h, xmt.cc: throw invalid_argument exception
	if shared or recursive mutex not supported by platform;
	use namespace xmt instead of __impl.

	* thr_mgr.h, thr_mgr.cc: use namespace xmt instead
	of __impl.

	* libxmt: version 1.8.2

2005-11-29  Petr Ovtchenkov  <ptr@island.corbina.net>

	* xmt.h: add pthread_rwlock_* functionality.

	* libxmt: version 1.8.1

2005-08-19  Petr Ovtchenkov  <Petr.Ovchenkov@Kaspersky.COM>

	* xmt.h: created class LockerExt that work like Locker
	[auto-unlock in destructor] but take native mutex object.

	* libxmt: version 1.8.0

2005-06-30  Petr Ovtchenkov  <ptr@island.plnet.ru>

	* xmt.cc: Use local define to detect Netware;
	don't use set_terminate, set_unexpected on Netware

	* mwccnlm.mak: makefile for MetroWerks CodeWarrior for
	Novell Netware.

2005-03-25  Petr Ovtchenkov  <ptr@island.plnet.ru>

	* Makefile: revision of Makefiles---path to stlport lib and
	-lstlport went to common Makefiles.

2004-11-05  Petr Ovtchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* library naming scheme changed.

2004-05-06  Petr Ovtchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* xmt.cc: fix wrong calculation of difference between two
	timespecs.
	
2004-04-08  Petr Ovtchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* fl.c, flck.h: add file locking wrapper.

	* lfstream.h: filestream with file locking

2004-01-08  Petr Ovtchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* xmt.cc: apply CloseHandle call for thread handler under Windows
	[thanks Anton Kholodkov].

2003-12-30  Petr Ovtchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* xmt.cc: user words should be freed before thread termination,
	not in dtor.

2003-12-29  Petr Ovtchenkov  <ptr@Island.Br.UrbanNet.Ru>
